feat: more natural API endpoints + auth
